--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <!--     Fonts and icons     -->
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,300,700|Material+Icons' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-  <script src="https://js.stripe.com/v3/"></script>
+  <!-- <script src="https://js.stripe.com/v3/"></script> -->
 
 </head>
 <body>
